fix(ZNTA-2107) fixed word-breaks in Firefox

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -906,8 +906,8 @@ pre {
   display: block;
   margin: 0 0 @spacing-heading;
   padding: @spacing-large-horizontal;
-  word-wrap: break-word;
-  word-break: break-all;
+  word-break: normal;
+  word-break: break-word; /*Chrome specific*/
   color: @gray-dark;
   border: 1px solid #ccc;
   border-radius: @border-radius-base;
@@ -6036,8 +6036,9 @@ i.i--left.i--lock, i.i--left.i--trash {
 }
 
 .translationContainer pre.cm-s-default {
-  word-break: break-word;
-  word-wrap: break-word;
+  word-wrap: normal;
+  word-break: normal;
+  word-break: break-word; /*Chrome specific*/
   -webkit-hyphens: initial;
   -moz-hyphens: initial;
   hyphens: initial;
